src/main.scss
/* {{{ /* ---- Dotfiles variables ---- */
:root {
  --dotfiles-colorscheme-bg: #2d2d2d;
  --dotfiles-colorscheme-fg: #d3d0c8;
  --dotfiles-colorscheme-selection-bg: #515151;
  --dotfiles-colorscheme-selection-fg: #d3d0c8;
  --dotfiles-colorscheme-cursor-bg: #d3d0c8;
  --dotfiles-colorscheme-cursor-fg: #2d2d2d;
  --dotfiles-colorscheme-base-00: #2d2d2d;
  --dotfiles-colorscheme-base-01: #393939;
  --dotfiles-colorscheme-base-02: #515151;
  --dotfiles-colorscheme-base-03: #747369;
  --dotfiles-colorscheme-base-04: #a09f93;
  --dotfiles-colorscheme-base-05: #d3d0c8;
  --dotfiles-colorscheme-base-06: #e8e6df;
  --dotfiles-colorscheme-base-07: #f2f0ec;
  --dotfiles-colorscheme-base-08: #f2777a;
  --dotfiles-colorscheme-base-09: #f99157;
  --dotfiles-colorscheme-base-0A: #ffcc66;
  --dotfiles-colorscheme-base-0B: #99cc99;
  --dotfiles-colorscheme-base-0C: #66cccc;
  --dotfiles-colorscheme-base-0D: #6699cc;
  --dotfiles-colorscheme-base-0E: #cc99cc;
  --dotfiles-colorscheme-base-0F: #d27b53;
}
/* }}} */

/* {{{ /* ----- Chat view ----- */

/* Server list */
.scroller-1Bvpku,
.childWrapper-anI2G9 {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Servers with only an acronym */
.childWrapper-anI2G9 {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Channel, member, and DM list */
.container-3w7J-x,
.members-1998pB,
.members-1998pB > div,
.searchBar-6Kv8R2,
.scroller-1JbKMe {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Folders */
.expandedFolderBackground-1cujaW,
.folder-1hbNCn,
.folder-1hbNCn.hover-qTxTR_ {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Toolbar at top of chat (channel name | desc) */
.container-1r6BKw.themed-ANHk51 {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Desc modal */
.theme-dark .root-1gCeng {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Search bar */
.searchBar-3dMhjb {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Search popout */
.theme-dark .tab-2j5AEF.selected-2LAck8,
.theme-dark .option-96V44q.selected-rZcOL-,
.theme-dark .focused-2bY0OD {
  background-color: var(--dotfiles-colorscheme-selection-bg);
}
.theme-dark .container-3ayLPN {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.theme-dark .option-96V44q:after,
.theme-dark .option-96V44q.selected-rZcOL-:after {
  background: none;
}

/* Search sidebar */
.tab-2j5AEF,
.searchResult-9tQ1uo {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.tab-2j5AEF:hover {
  background-color: var(--dotfiles-colorscheme-selection-bg);
}
.searchHeader-2XoQg7,
.searchResultsWrap-3-pOjs,
.channelName-1JRO3C {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Friends list */
.theme-dark .container-1D34oG {
  background-color: var(--dotfiles-colorscheme-base-01);
}

.side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ,
.topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ {
  background-color: var(--dotfiles-colorscheme-selection-bg);
}
.brand-1Zl8en.item-PXvHYJ,
.themed-OHr7kt.item-PXvHYJ {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.side-8zPYf6 .themed-OHr7kt.item-PXvHYJ:hover:not(.disabled-1Hwwfb),
.topPill-30KHOu .themed-OHr7kt.item-PXvHYJ:hover:not(.disabled-1Hwwfb) {
  background-color: var(--dotfiles-colorscheme-selection-bg);
}

/* Friends list > Now Playing */
.container-lRFx4q {
  background-color: var(--dotfiles-colorscheme-bg);
}
.wrapper-3D2qGf {
  border: 2px solid var(--dotfiles-colorscheme-base-02);
  background-color: var(--dotfiles-colorscheme-base-01);
}
.section-2gLsgF {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Chat & Loading chat */
.chat-3bRxxu,
.wrapper-3vR61M,
.wrapper-1F5TKx {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Text areas */
.scrollableContainer-2NUZem,
.channelTextArea-rNsIhG,
.input-2_SIlA {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Markdown elements */
.blockquoteDivider-2hH8H6 {
  background-color: var(--dotfiles-colorscheme-base-03);
}
.after_inlineCode-1KfVgj,
.before_inlineCode-1G9rTK,
.inlineCode-2ngu6Y {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.markup-2BOw-j code {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Little gradient at end of channel desc */
.theme-dark .children-19S4PO:after {
  background: none;
}

/* Bottom right user panel */
.panels-j1Uci_ {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* User popout */
.userPopout-xaxa6l,
.profileBannerPreview-3_l0Wd {
  border: 2px solid;
  border-color: var(--dotfiles-colorscheme-base-02);
}
.userPopout-xaxa6l,
.footer-3UKYOU,
.bodyInnerWrapper-26fQXj,
.profileBannerPreview-3_l0Wd {
  background-color: var(--dotfiles-colorscheme-bg);
}
.avatarUploaderInner-Oiob_P,
.avatar-37jOim {
  border: 6px solid var(--dotfiles-colorscheme-base-02);
  background-color: var(--dotfiles-colorscheme-base-02);
}
.popoutBanner-19WKGg {
  border-radius: 8px 8px 0 0;
}
.profileBanner-33-uE1 {
  border-radius: 4px 4px 0 0;
}

/* User modal */
.root-3QyAh1 {
  border: 2px solid var(--dotfiles-colorscheme-base-02);
}
.body-r6_QPy,
.topSection-y3p-_D {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.avatar-AvHqJA {
  background-color: var(--dotfiles-colorscheme-base-02);
  border: 8px solid var(--dotfiles-colorscheme-base-02);
}
.pc-connections .connectedAccounts-QlRa4m:empty::before {
  background-color: transparent !important;
}

/* Emoji popout */
.popoutContainer-1MXdqN {
  background-color: var(--dotfiles-colorscheme-bg);
  border: 2px solid;
  border-color: var(--dotfiles-colorscheme-base-02);
}
.guildSection-1EoFKd {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Hovering menu */
.scroller-3BxosC {
  background-color: var(--dotfiles-colorscheme-base-01);
  border-radius: 8px;
  border: 2px solid;
  border-color: var(--dotfiles-colorscheme-base-02);
}
.menu-3sdvDG {
  border-radius: 8px;
}

/* Tooltip */
.theme-dark .tooltipPrimary-1d1ph4 {
  background-color: var(--dotfiles-colorscheme-base-01);
  border: 2px solid var(--dotfiles-colorscheme-base-02);
}
.theme-dark .tooltipPrimary-1d1ph4 .tooltipPointer-3ZfirK {
  border-top-color: var(--dotfiles-colorscheme-base-02);
}

/* Modal */
.theme-dark .footer-2gL1pp {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Blue buttons */
.lookFilled-1Gx00P.colorBrand-3pXr91 {
  background-color: var(--dotfiles-colorscheme-base-0D);
}

/* Dropdowns */
.css-gvi9bl-control {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* }}} */

/* {{{ /* ----- VC View ----- */

/* Buttons */
.colorable-1bkp8v.white-3GPOIp,
.colorable-1bkp8v.white-3GPOIp .centerIcon-2G6o-T {
  background-color: var(--dotfiles-colorscheme-selection-bg);
}

/* }}} */

/* {{{ /* ----- Settings ----- */

/* {{{ /* ----- User ----- */

/* Sidebar */
.sidebarRegionScroller-3MXcoP {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Main content */
.contentRegionScroller-26nc1e {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Account card */
.accountProfileCard-1XCH88 {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.background-1QDuV2,
.fieldList-21DyL8,
.avatar-1uQSZT {
  background-color: var(--dotfiles-colorscheme-base-02);
}
.avatar-1uQSZT {
  border: 7px solid var(--dotfiles-colorscheme-base-02);
}

/* Radio bars (e.g. Privacy & Safety) */
.item-26Dhrx {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.item-26Dhrx[aria-checked='true'] {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Dropdowns */
.css-3vaxre-menu {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Connections */
.accountList-33MS45 {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.accountBtn-2Nozo3 .accountBtnInner-sj5jLs {
  background-color: var(--dotfiles-colorscheme-base-02);
}
.connectionHeader-2MDqhu {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.connectionOptionsWrapper-3KIj1Z {
  background-color: var(--dotfiles-colorscheme-base-02);
  border-radius: 0 0 8px 8px;
}

/* Authorized apps */
.cardPrimaryOutline-29Ujqw {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Nitro */
.detailsBlock-FoDTGA,
.theme-dark .feature-2w65J5,
.premiumSubscriptionAccountCredit-25i0tQ {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Server Boost */
.card-3AyPWq {
  background-color: var(--dotfiles-colorscheme-base-02);
}
.card-3AyPWq:hover {
  background-color: var(--dotfiles-colorscheme-base-01);
}

.theme-dark .gemIndicatorContainer-2jdECl {
  background-color: var(--dotfiles-colorscheme-bg);
}

/* Appearance */
.preview-2nSL_2 {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Accessibility */
.preview-2Vkbi6 {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.previewMessage-1ZN7YG {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Voice & Video */
.theme-dark .userSettingsVoice-iwdUCU .previewOverlay-2O7_KC {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.cardPrimary-1Hv-to,
.cardPrimaryEditable-3KtE4g {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* }}} */

/* {{{ /* ----- Guild ----- */

/* Stickers & Server Boost */
.theme-dark .tierHeaderUnlocked-3lTDnP,
.wrapper-18yWki,
.theme-dark .tierHeaderLocked-3S508x {
  background-color: var(--dotfiles-colorscheme-base-01);
}
.theme-dark .tierBody-3aUxuc {
  background-color: var(--dotfiles-colorscheme-base-02);
}

/* Server Template */
.descriptionBox-1EKQKL {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* Community */
.featureCard-1RR4Tl {
  background-color: var(--dotfiles-colorscheme-base-01);
}

/* }}} */

/* }}} */

/* {{{ /* ---- GM Store ---- */

div[id='gm-settings-inject'] {
  background-color: var(--dotfiles-colorscheme-base-01) !important;
}

.gm-store-card {
  border: 3px solid var(--dotfiles-colorscheme-base-02);
  background-color: var(--dotfiles-colorscheme-base-02) !important;
}
.gm-store-card > :nth-child(1) {
  background-color: var(--dotfiles-colorscheme-base-01) !important;
}

/* }}} */

